# image

./: .travis.yml  CMakeLists.txt  FindTorch.cmake  LICENSE  README.md  README.txt  compress.c  image-1.0-0.rockspec  image-1.0-1.rockspec  image-1.0.1-0.rockspec  image-1.1.alpha-0.rockspec  image.c  image.lua  init.lua  jpeg.c  mkdocs.yml  png.c  ppm.c  test_gaussian.lua  test_warp.lua
assets/: bmp-without-ext
doc/: colorspace.md  drawing.md  gui.md  index.md  paramtransform.md  saveload.md  simpletransform.md  tensorconstruct.md
generic/: image.c  jpeg.c  png.c  ppm.c
test/: test.lua  test_compress_jpg.lua  test_conversion.lua  test_decompress_jpg.lua  test_flip.lua  test_gaussian.lua  test_gaussianpyramid.lua  test_png.lua  test_ppm.lua  test_rotate.lua  test_scale.lua  test_vflip.lua  test_warp.lua
tests/: test_compress.lua  test_vflip.lua
